added Task test